[gd_scene load_steps=17 format=3 uid="uid://4aaql8kdi01a"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_jb4eo"]
[ext_resource type="PackedScene" uid="uid://csiu337t6b4ei" path="res://objects/sound_button.tscn" id="2_iof6i"]
[ext_resource type="PackedScene" uid="uid://cf1wbtbkkii7e" path="res://objects/sound_save.tscn" id="2_kskmr"]
[ext_resource type="Script" path="res://scripts/sound_button.gd" id="3_2hg6s"]
[ext_resource type="PackedScene" uid="uid://rojxo58kmcy8" path="res://objects/music_button.tscn" id="4_3kpei"]
[ext_resource type="Script" path="res://scripts/music_button.gd" id="5_k7uem"]

[sub_resource type="Gradient" id="Gradient_ah4gi"]
offsets = PackedFloat32Array(0, 0.0438596, 0.587719, 0.596491, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.0896173, 0.0181642, 0.0878933, 1, 0.923747, 0.187231, 0.905978, 1, 0.931048, 0.265049, 0.91498, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_vy0t7"]
gradient = SubResource("Gradient_ah4gi")

[sub_resource type="FontVariation" id="FontVariation_fg0qd"]

[sub_resource type="LabelSettings" id="LabelSettings_0o5gp"]
font = SubResource("FontVariation_fg0qd")
font_size = 40

[sub_resource type="FontVariation" id="FontVariation_k4t3r"]

[sub_resource type="LabelSettings" id="LabelSettings_43p0x"]
font = SubResource("FontVariation_k4t3r")
font_size = 33
font_color = Color(0, 0, 0, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_jne33"]

[sub_resource type="LabelSettings" id="LabelSettings_bxkt5"]
font_size = 40

[sub_resource type="CanvasTexture" id="CanvasTexture_riuji"]

[sub_resource type="LabelSettings" id="LabelSettings_5bxrq"]
font_size = 40

[node name="MainMenu" type="Node3D"]
script = ExtResource("1_jb4eo")

[node name="Camera3D" type="Camera3D" parent="."]

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(512, 296)
rotation = 1.5708
scale = Vector2(2.41253, -1045.34)
texture = SubResource("GradientTexture1D_vy0t7")

[node name="LottoGenerator" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.055
anchor_top = 0.582
anchor_right = 0.438
anchor_bottom = 0.709
offset_left = -0.319942
offset_top = -33.2
offset_right = -233.512
offset_bottom = -78.4
scale = Vector2(2.46606, 2.46606)
text = "LOTTO GENERATOR"

[node name="DiceGame" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.564
anchor_top = 0.582
anchor_right = 0.947
anchor_bottom = 0.709
offset_left = 0.463928
offset_top = -33.2
offset_right = -232.728
offset_bottom = -78.4
scale = Vector2(2.46606, 2.46606)
text = "DICE GAME"

[node name="Freeman\'s Game Collection" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.273
anchor_top = 0.248
anchor_right = 0.759
anchor_bottom = 0.34
offset_left = -2.552
offset_top = 0.199997
offset_right = -3.21606
text = "FREEMAN'S PARTY GAMES
"
label_settings = SubResource("LabelSettings_0o5gp")

[node name="Version" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.408
anchor_top = 0.88
anchor_right = 0.607
anchor_bottom = 0.957
offset_left = 0.207977
offset_top = -0.00012207
offset_right = 0.431885
offset_bottom = -0.200012
text = "Version 1.2"
label_settings = SubResource("LabelSettings_43p0x")

[node name="SoundButton" parent="." instance=ExtResource("2_iof6i")]
script = ExtResource("3_2hg6s")

[node name="MusicButton" parent="." instance=ExtResource("4_3kpei")]
script = ExtResource("5_k7uem")

[node name="SoundSave" parent="." instance=ExtResource("2_kskmr")]

[node name="Credits" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.772
anchor_top = 0.855
anchor_right = 0.961
anchor_bottom = 0.958
offset_left = 0.471985
offset_right = -50.064
offset_bottom = -9.80005
scale = Vector2(1.34811, 1.34811)
text = "CREDITS"

[node name="LoadingDiceGameLayer" type="CanvasLayer" parent="."]
visible = false

[node name="LoadingBG" type="Sprite2D" parent="LoadingDiceGameLayer"]
self_modulate = Color(0.388235, 0.00392157, 0.423529, 1)
position = Vector2(511.5, 304.5)
scale = Vector2(1085, 653)
texture = SubResource("CanvasTexture_jne33")

[node name="LoadingLabel" type="Label" parent="LoadingDiceGameLayer"]
offset_left = 169.0
offset_top = 246.0
offset_right = 877.0
offset_bottom = 469.0
text = "LOADING DICE GAME
PLEASE WAIT..."
label_settings = SubResource("LabelSettings_bxkt5")
horizontal_alignment = 1

[node name="LoadingLottoGeneratorLayer" type="CanvasLayer" parent="."]
visible = false

[node name="LoadingBG" type="Sprite2D" parent="LoadingLottoGeneratorLayer"]
self_modulate = Color(0.388235, 0.00392157, 0.423529, 1)
position = Vector2(511.75, 299.75)
scale = Vector2(1024.5, 600.5)
texture = SubResource("CanvasTexture_riuji")

[node name="LoadingLabel" type="Label" parent="LoadingLottoGeneratorLayer"]
offset_left = 165.0
offset_top = 246.0
offset_right = 873.0
offset_bottom = 469.0
text = "LOADING LOTTO GENERATOR
PLEASE WAIT..."
label_settings = SubResource("LabelSettings_5bxrq")
horizontal_alignment = 1

[connection signal="pressed" from="LottoGenerator" to="." method="_on_lotto_generator_pressed"]
[connection signal="pressed" from="DiceGame" to="." method="_on_dice_game_pressed"]
[connection signal="pressed" from="SoundButton" to="SoundButton" method="_on_pressed"]
[connection signal="pressed" from="MusicButton" to="MusicButton" method="_on_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_credits_pressed"]
